--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h3>Score: <span id="result">0</span></h3>
+    <div id="grid"></div>
     <script src="app.js"></script>
 </body>
 </html>
